fix(list-item): align elements to the left of the item's content

--- a/packages/calcite-components/src/components/list-item/list-item.scss
+++ b/packages/calcite-components/src/components/list-item/list-item.scss
@@ -399,6 +399,13 @@
   }
 }
 
+.drag-container,
+.selection-container,
+.expanded-container,
+.actions-start {
+  padding-block-end: var(--calcite-spacing-px);
+}
+
 .expanded-container,
 .selection-container {
   @apply cursor-pointer;
